Add fetching and seting the value and next value

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,10 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "dspy>=3.0.4",
+    "pydantic>=2.12.5",
+]
+
+[dependency-groups]
+dev = [
+    "mypy>=1.19.1",
 ]
