Add an Optimization protocol

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "dspy>=3.0.4",
+    "optuna>=4.6.0",
     "pydantic>=2.12.5",
 ]
 
